# provider-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: guide.md
examples/echo_platform/: plugin.py
examples/hello_plugin/: _manifest.json  plugin.py
persist/qwen/: proxy_selector.json
provider_sdk/: __init__.py  components.py  context.py  integrate.py  model_ids.py  platform.py  plugin.py
provider_sdk/capabilities/: __init__.py
provider_sdk/core/: __init__.py  components.py  config.py  context.py  integrate.py  platform.py  plugin.py
provider_sdk/extensions/: __init__.py
provider_sdk/extensions/fncall/: __init__.py  mixin.py
provider_sdk/extensions/platform/: __init__.py  adapter.py  bridge.py  sse_common.py
provider_sdk/runtime/: __init__.py  installer.py  loader.py  manager.py
provider_sdk/types/: __init__.py  candidate.py  components.py  manifest.py  model_ids.py
scripts/: check_banned_terms.py
tests/: checkterms.py  helpers.py  test_components.py  test_config.py  test_loader.py  test_model_ids.py  test_sse_common.py
tests/examples/echo_platform/: manifest.json
