[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-sdk"
version = "0.2.0"
description = "Provider-V2 平台插件 SDK — 第三方平台适配器开发与加载"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "provider-sdk" },
]
keywords = ["provider", "llm", "gateway", "plugin", "sdk", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nichengfuben/provider-sdk"
Documentation = "https://github.com/nichengfuben/provider-sdk/blob/main/docs/guide.md"
Repository = "https://github.com/nichengfuben/provider-sdk"
Issues = "https://github.com/nichengfuben/provider-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["provider_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
